<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/textColorBookTitle"
        android:text="@string/book_title"
        android:id="@+id/book_title"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/textColorBookAuthors"
        android:text="@string/book_authors"
        android:id="@+id/book_authors"
        android:hint="@string/no_authors"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/book_description"
        android:id="@+id/book_description"
        android:hint="@string/no_description"
        android:maxLines="2"/>

</LinearLayout>